Content/styles.css
body {
    font-size: 16px;
}

@media only screen and (min-width:992px) {
    .full-width {
        width: 100vw;
        position: relative;
        margin-left: -50vw;
        left: 50% !important;
    }
}

a {
    text-decoration: none;
}

/* colors */

    

    /* the yellow highlight text color */
    .color-highlight {
        color: #DBC11F!important;
    }

    /* the color of the most-top bar and the footer */
    .bg-color-dark-blue {
        background-color: #1C3050!important;
    }

    .bg-color-light-blue {
        background-color: #C6D9F0
    }

/* the most-top bar styles */
.most-top-bar {
    font-size: 0.75em;
    color: #CFD8DC;
}

    .most-top-bar a {
        color: #CFD8DC;
    }

/* navbar styles */
.navbar {
    height: 70px;
    font-weight: 700;
}

    .navbar a {
        color: #1C3050 !important;
    }

    .navbar a:hover {
        color: #0288D1 !important;
    }

    .dropdown-menu {
        background-color: #4A6484;
        border-bottom: 20px solid #1C3050;
        background-image: url("Images/lion-blue.png");
        background-repeat: no-repeat;
        background-position: 80%;
        background-size: contain;
    }

    .navbar-dropdown-titles {
        color: #DBC11F!important;
        font-weight: bold;
    }

    .navbar-dropdown-items a {
        color: white!important;
    }

    .navbar-dropdown-items a:hover {
        color: white !important;
        text-decoration: underline;
    }

.upper-footer {
    font-size: 0.8em;
    color: #1C3050;
}

